// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FLPSelect /> > should render as expected 1`] = `
<body>
  <div>
    <div
      class="d_flex flex_column gap_2"
    >
      <label
        for="label"
      >
        label
      </label>
      <div
        class="chakra-select__wrapper css-42b2qy"
      >
        <select
          class="chakra-select css-1ik61og"
          id="label"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
        <div
          class="chakra-select__icon-wrapper css-162mkon"
        >
          <svg
            aria-hidden="true"
            class="chakra-select__icon"
            focusable="false"
            role="presentation"
            style="width: 1em; height: 1em; color: currentcolor;"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<FLPSelect /> > should render as expected as row 1`] = `
<body>
  <div>
    <div
      class="d_flex flex_row items_center gap_4"
    >
      <label
        for="label"
      >
        label
      </label>
      <div
        class="chakra-select__wrapper css-42b2qy"
      >
        <select
          class="chakra-select css-1ik61og"
          id="label"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
        <div
          class="chakra-select__icon-wrapper css-162mkon"
        >
          <svg
            aria-hidden="true"
            class="chakra-select__icon"
            focusable="false"
            role="presentation"
            style="width: 1em; height: 1em; color: currentcolor;"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</body>
`;
